# B06-RoboticIOT

./: .gitignore  README.md  details.md  pyproject.toml
docs/: 03-B06_RoboticIOT与物理数据层课题.md  260606_PhysicalAI数据层项目启动说明.md
docs/profiles/: README.md  a01_weld_workcell_job_window.md  a02_manipulation_skill_asset_evidence.md  b06_to_a02_evidence_handoff.md  b08_equipment_timeseries_observation_package.md  s01_manufacturing_event_context_package.md
docs/real-data/: README.md
docs/research/: 01-rerun调研框架与原子能力清单.md  02-rerun.io第一轮公开资料调研.md  03-rerun二次开发路线判断矩阵.md  04-rerun阶段二本地技术评测报告.md  05-physical-ai数据包阶段三实施记录.md  06-lerobot到physical-ai-package映射.md  06-lerobot开放数据样板链路记录.md  README.md
docs/sdk/: README.md  adoption_checklist.md  demo_ui_evaluation.md  real_data_onboarding.md  stage8_pipeline_walkthrough.md
docs/stage11/: README.md
docs/stage12a/: README.md  h300_static_project_structure_summary.md
docs/stage2/: README.md  viewer_blueprint_checklist.md
docs/stage3/: README.md
docs/stage4/: README.md
docs/stage5/: README.md  engineering_handoff.md
docs/stage6/: README.md  real_data_field_mapping.md  real_robot_data_asset_module.md
docs/stage7/: README.md  (+3 more)
examples/: cli_json_smoke.sh  sdk_existing_package_ops.py  sdk_h300_static_project_inspect.py  sdk_low_level_importer.py  sdk_pipeline_stage8.py  sdk_real_data_onboarding.py
scripts/: evaluate_stage2_catalog.py  generate_stage2_simulation.py  generate_stage7_sim_window.py  generate_stage8_h300_synthetic_demo.py  physical_ai_package.py  prepare_open_robot_sample.py  rerun_importer_sim_weld.py
(+90 files in other folders)
