[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b06-physical-ai-data-layer"
version = "0.1.0"
description = "Stage 2 local Rerun evaluation for Physical AI data layer"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pillow>=10",
  "pyarrow>=16",
  "rerun-sdk[dataplatform]>=0.33.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
lerobot = [
  "lerobot>=0.3.0",
]

[tool.uv]
override-dependencies = [
  "rerun-sdk[dataplatform]>=0.33.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
